<resources>
    <string name="app_name">Depth of Field Calculator</string>
    <string name="action_CalculateDoF">Calculate DoF</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="select_a_lens">Select a lens to use:</string>
    <string name="title_activity_add_lens">Add a new Lens</string>
    <string name="addLens_Make">Make</string>
    <string name="addLens_Focal_Length">Focal Length [mm]</string>
    <string name="addLensAperture">Aperture</string>
    <string name="title_activity_calculator">Calculate DoF</string>
    <string name="addLens_addButton">Add Lens</string>
    <string name="addLens_cancelButton">Cancel</string>
    <string name="select_another_lens">Select Another Lens</string>
    <string name="delete_selected_lens">Delete Selected Lens</string>
    <string name="edit_selected_lens">Edit Selected Lens</string>
    <string name="far_focal_distance">Far Focal Distance</string>
    <string name="depth_of_field">Depth of Field</string>
    <string name="hyperfocal_distance">Hyperfocal Distance</string>
    <string name="enter_all_values">Enter all values</string>
    <string name="distance_to_subject">Distance to subject [m]</string>
    <string name="exampleDistance">ex: 1.5 for 1.5m</string>
    <string name="selected_aperture">Selected aperture</string>
    <string name="photo_details_with">Photo details with</string>
    <string name="circle_of_confusion_m">Circle of Confusion [m]</string>
    <string name="near_focal_distance">Near Focal Distance</string>
    <string name="exampleFocalLength">ex: 2.8 for F2.8</string>
    <string name="selectLens">Select a lens!</string>
    <string name="select_aLens">Select a lens to use:\n</string>
    <string name="zeroAddLensmsg"><![CDATA[You do not have any lens added yet.\n To add a new lens go to: tool bar -> Add Lens]]></string>
    <string name="error1">Please enter a valid aperture for your Lens, example: 1.5 for 1.5mm, valid apertures are those greater than or equal to 1.4mm</string>
    <string name="error2">Please enter a valid focal length for your Lens, example: 90 for 90mm, focal lengths are greater than 0</string>
    <string name="error3">Please enter a Make for your Lens, example: \'Canon\'</string>
    <string name="optional_features">Optional Features\n1. App bar buttons with toolbar\n2. Edit and Delete  Lens\n3. Error Checking Input\n4. Auto-recalculate \n5. Empty State</string>
    <string name="error4">Please enter a valid aperture, a valid apertures are greater than 1.4, the aperture should also be greater than the selected lens\' aperture, example 1.8 for F1.8</string>
    <string name="error5">Please enter a valid distance, a valid distance is greater than 0, example 1.1 for 1.1m</string>
    <string name="error6">Enter a valid Circle of Confusion, valid CoCs\' are greater than 0</string>
</resources>